--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -1,6 +1,6 @@
 mixin footer(value = {})
 	- let _class = value.class;
-	footer.footer(itemprop="author" class=_class)
+	footer.footer.transition-fade(itemprop="author" class=_class data-container)
 		.layout-contain
 			.layout-padding.style-center.style-font-weight-bold.style-font-title.style-spaceout-small(itemprop="publisher" itemscope itemtype="https://schema.org/Organization" itemid="https://www.josephojo.com")
 				span Made with ❤ by
