--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -9,31 +9,30 @@ mixin navbar(value = {})
 	- let focusIndex = tabs.indexOf(name.toLowerCase());
 
 	header.header
-		div(data-container)
-			nav.navbar.navbar-fixed(class=_class itemscope itemtype="https://schema.org/SiteNavigationElement")
-				.layout-contain-large.navbar-layout
-					.navbar-head
-						+link({
-							href: "/",
-							class: "navbar-title style-primary-dark-hover style-primary-focus"
-						})(itemprop="url")
-							img.navbar-logo(src="/assets/gear-svg-icon-logo-color-2.svg" alt="Logo." inline)
-							span.navbar-title-line
-							span(itemprop="name") JOSEPH!
-						.layout-spacer
-						.navbar-foot.navbar-mobile
-							.layout-inline-block
-								a.navbar-menu.action-btn.layer-round.layout-padding-smaller.layer-transparent.layer-light-hover.style-primary.style-hover-primary.style-focus-primary(title="Menu Bar")
-									span.action-btn-group
-										i.action-icon.style-font-family-bold.style-font-size-24(inline) menu
+		nav.navbar.navbar-fixed(class=_class itemscope itemtype="https://schema.org/SiteNavigationElement")
+			.layout-contain-large.navbar-layout
+				.navbar-head
+					+link({
+						href: "/",
+						class: "navbar-title style-primary-dark-hover style-primary-focus"
+					})(itemprop="url")
+						img.navbar-logo(src="/assets/gear-svg-icon-logo-color-2.svg" alt="Logo." inline)
+						span.navbar-title-line
+						span(itemprop="name") JOSEPH!
+					.layout-spacer
+					.navbar-foot.navbar-mobile
+						.layout-inline-block
+							a.navbar-menu.action-btn.layer-round.layout-padding-smaller.layer-transparent.layer-light-hover.style-primary.style-hover-primary.style-focus-primary(title="Menu Bar")
+								span.action-btn-group
+									i.action-icon.style-font-family-bold.style-font-size-24(inline) menu
 
-					.layout-spacer.navbar-desktop
-					.navbar-main
-						ul.navbar-list.transition-fade
-							each tab, i in tabs
-								li
-									+link({
-										href: `/${tab}`,
-										class: `navbar-link${i == focusIndex ? " navbar-link-focus" : ""}`
-									})(itemprop="url")
-										span.navbar-link-content(itemprop="name")= tab
+				.layout-spacer.navbar-desktop
+				.navbar-main
+					ul.navbar-list.transition-fade(data-container)
+						each tab, i in tabs
+							li
+								+link({
+									href: `/${tab}`,
+									class: `navbar-link${i == focusIndex ? " navbar-link-focus" : ""}`
+								})(itemprop="url")
+									span.navbar-link-content(itemprop="name")= tab
