--- a/views/app.pug
+++ b/views/app.pug
@@ -94,9 +94,8 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		block navbar
 			+navbar(page)
 
-		.transition-in-view(data-container)
-			main#main.main
-				block content
+		main#main.main.transition-in-view(data-container)
+			block content
 
 		.layer-action-center.layer-action-center-show
 			article.layer-action-group
