--- a/views/pages/about-me.pug
+++ b/views/pages/about-me.pug
@@ -43,4 +43,4 @@ block content
 					href: "/my-resume",
 					class: "layout-margin-vert-dull layout-margin-left-mini",
 					content: "here."
-				})
+				})(data-swup-preload)
