Fixed banner font-size on mobile bug

--- a/views/components/banner.pug
+++ b/views/components/banner.pug
@@ -13,7 +13,7 @@ mixin banner(value = {})
             .layer-header
               h1.style-font-title.layer-title.style-white.style-font-weight-bolder(itemprop="headline")!= title
             .layer-main
-              h2.h5.style-font-family-bold.style-font-weight-300.style-white.layer-main-text(itemprop="description")!= content
+              h2.style-font-family-bold.style-font-weight-300.style-white.layer-main-text(itemprop="description")!= content
             .layout-align-self-end
               button.layer-footer.action-btn.action-btn-hover.layer-shadow.layer-round.layout-padding-smallest.layer-white.layer-secondary-light-hover.layer-secondary-focus.style-primary.style-surface-hover.style-surface-focus.layer-hero-scroll-down(type="button" tabindex="0")
                 span.action-btn-group
