--- a/views/app.pug
+++ b/views/app.pug
@@ -94,7 +94,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		block navbar
 			+navbar(page)
 
-		main#main.main.transition-in-view(data-container)
+		main#main.main.transition-in-view(data-container tabindex="-1")
 			block content
 
 		.layer-action-center.layer-action-center-show
