--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -47,7 +47,7 @@ block content
 					})
 						+p({
 							content: "2018",
-							class: "layout-block style-font-17--device-phone style-font-20 style-bold "
+							class: "layout-block style-font-17--device-phone style-font-20 style-bold"
 						})
 						+p({
 							content: "E-commerse",
@@ -67,7 +67,7 @@ block content
 			+main({
 				class: "layout-padding-vert-large"
 			})
-				span.layout-margin-horz-left.layout-inline-block= " "
+				//- span.layout-margin-horz-left.layout-inline-block= " "
 				+p("One of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes... For more info")
 				+link({
 					href: "/about-me",
