--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -218,7 +218,7 @@ $sizes: (
 
 @import "./components/base.scss";
 @import "./components/fonts.scss";
-@import "./components/header.scss";
+@import "./components/navbar.scss";
 @import "./components/style.scss";
 @import "./components/action.scss";
 @import "./components/layout.scss";
