--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -28,11 +28,11 @@ mixin navbar(value = {})
 
 				.layout-spacer.navbar-desktop
 				.navbar-main
-					ul.navbar-list.transition-fade(data-container)
+					ul.navbar-list
 						each tab, i in tabs
 							li
 								+link({
 									href: `/${tab}`,
 									class: `navbar-link${i == focusIndex ? " navbar-link-focus" : ""}`
-								})(itemprop="url" data-swup-preload)
+								})(itemprop="url" data-swup-preload title=`${tab[0].toUpperCase() + tab.slice(1)} page link`)
 									span.navbar-link-content(itemprop="name")= tab
