--- a/views/pages/sitemap.pug
+++ b/views/pages/sitemap.pug
@@ -31,40 +31,40 @@ block content
 						li
 							+link({
 								href: "/",
-								class: "style-italic style-underline",
+								class: "style-italic style-underline layout-margin-right-nano",
 								content: "Home"
 							})
-							+p(" - Homepage galor, its the begining of our little adventure. Do you want to go back?")
+							+p("- Homepage galor, its the begining of our little adventure. Do you want to go back?")
 							br
 
 						//- About
 						li
 							+link({
 								href: "/about-me",
-								class: "style-italic style-underline",
+								class: "style-italic style-underline layout-margin-right-nano",
 								content: "About"
 							})
-							+p(" - The story of me, myself and I. Shall we begin?")
+							+p("- The story of me, myself and I. Shall we begin?")
 							br
 
 						//- Projects
 						li
 							+link({
 								href: "/my-projects",
-								class: "style-italic style-underline",
+								class: "style-italic style-underline layout-margin-right-nano",
 								content: "Projects"
 							})
-							+p(" - Hardwork and perseverance, hear all about it.")
+							+p("- Hardwork and perseverance, hear all about it.")
 							br
 
 						//- Contact
 						li
 							+link({
 								href: "/contact-me",
-								class: "style-italic style-underline",
+								class: "style-italic style-underline layout-margin-right-nano",
 								content: "Contact"
 							})
-							+p(" - Do you have a project that demands perservance and passion? Then, lets talk.")
+							+p("- Do you have a project that demands perservance and passion? Then, lets talk.")
 							br
 
 block footer
