--- a/views/pages/sitemap.pug
+++ b/views/pages/sitemap.pug
@@ -31,8 +31,8 @@ block content
 						li
 							+link({
 								href: "/",
-								class: "style-italic style-underline layout-margin-right-nano",
-								content: "Home"
+								class: "style-italic style-underline layout-margin-right-mini",
+								content: "Homepage"
 							})
 							+p("- Homepage galor, its the begining of our little adventure. Do you want to go back?")
 							br
@@ -41,8 +41,8 @@ block content
 						li
 							+link({
 								href: "/about-me",
-								class: "style-italic style-underline layout-margin-right-nano",
-								content: "About"
+								class: "style-italic style-underline layout-margin-right-mini",
+								content: "About Me"
 							})
 							+p("- The story of me, myself and I. Shall we begin?")
 							br
@@ -51,8 +51,8 @@ block content
 						li
 							+link({
 								href: "/my-projects",
-								class: "style-italic style-underline layout-margin-right-nano",
-								content: "Projects"
+								class: "style-italic style-underline layout-margin-right-mini",
+								content: "My Projects"
 							})
 							+p("- Hardwork and perseverance, hear all about it.")
 							br
@@ -61,10 +61,20 @@ block content
 						li
 							+link({
 								href: "/contact-me",
-								class: "style-italic style-underline layout-margin-right-nano",
-								content: "Contact"
+								class: "style-italic style-underline layout-margin-right-mini",
+								content: "Contact Me"
 							})
 							+p("- Do you have a project that demands perservance and passion? Then, lets talk.")
+							br
+
+						//- Resume
+						li
+							+link({
+								href: "/my-resume",
+								class: "style-italic style-underline layout-margin-right-mini",
+								content: "My Resume"
+							})
+							+p("- All the qualifications I have aquired over my life time, in readable, bite sized, format.")
 							br
 
 block footer
