--- a/views/pages/sitemap.pug
+++ b/views/pages/sitemap.pug
@@ -32,7 +32,7 @@ block content
 							+link({
 								href: "/",
 								class: "style-italic style-underline layout-margin-right-mini",
-								content: "Homepage"
+								content: "Home"
 							})
 							+p("- Homepage galor, its the begining of our little adventure. Do you want to go back?")
 							br
