--- a/views/app.pug
+++ b/views/app.pug
@@ -11,7 +11,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 				let page = {
 					url: "/",
 					name: "index",
-					title: "Joseph Ojo, the mechatronics engineer who could.",
+					title: "Joseph, the mechatronics engineer who could.",
 					description: "Hello, my name is Joseph Ojo and this is my portfolio website. This website contains all my projects, my resume and ways to contact me."
 				};
 
