--- a/views/components/sections.pug
+++ b/views/components/sections.pug
@@ -7,17 +7,17 @@ mixin head(value = {})
     block
 
 mixin main(value = {})
-  - let _class = typeof value != "string" ? value.class : "style-font-15--device-lt-tablet";
+  - let _class = typeof value != "string" ? value.class : "";
 
   .layer-main(class=_class)
     if typeof value == "string"
-      p.style-font-15--device-lt-tablet= value
+      p= value
     block
 
 mixin foot(value = {})
-  - let _class = typeof value != "string" ? value.class : "style-font-15--device-lt-tablet";
+  - let _class = typeof value != "string" ? value.class : "";
 
   .layer-footer(class=_class)
     if typeof value == "string"
-      span.style-font-15--device-lt-tablet.style-bold= value
+      span.style-bold= value
     block
