Added AOS, fixed SWUP bugs, added comments to js

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -224,3 +224,5 @@ $sizes: (
 @import "./components/layout.scss";
 @import "./components/layer.scss";
 @import "./components/transition.scss";
+
+@import "./library/aos.scss";
