--- a/views/components/link.pug
+++ b/views/components/link.pug
@@ -1,7 +1,7 @@
-mixin link(value = {})
+mixin link(value = {}, noFocus)
 	- let { content, href } = value;
 	- let _class = value.class || "layout-inline";
 	- let _href = dev && href[0] === "/" ? (href === "/" ? "/index.html" : `${href}.html`) : href;
-	//- tabindex="0"
-	a(href=_href class=_class title=content)&attributes(attributes)= content
+
+	a(href=_href class=`${_class} ${noFocus ? "" : "focus-box"}` title=content)&attributes(attributes)= content
 		block
