--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -131,15 +131,19 @@ block content
 					+column({
 						class: "layout-col-9 layout-padding-small"
 					})
-						+tile({
-							title: "Google Designs",
-							class: "layer-box layer-surface layout-block",
-							image: {
-								class: "effect-parallax",
-								src: "/assets/city",
-								alt: "City Alt",
-							}
-						})
+						+link({
+							href: "/about-me",
+							class: "layout-block"
+						}, true)
+							+tile({
+								title: "Google Designs",
+								class: "layer-box layer-surface layout-block",
+								image: {
+									class: "effect-parallax",
+									src: "/assets/city",
+									alt: "City Alt",
+								}
+							})
 
 				//- 2nd Row
 				+row({
@@ -149,14 +153,18 @@ block content
 					+column({
 						class: "layout-col-9 layout-padding-small layout-padding-vert-large"
 					})
-						+tile({
-							title: "Google Designs",
-							class: "layer-box layer-surface layout-block",
-							image: {
-								src: "/assets/blue-sky",
-								alt: "Blue sky Alt",
-							}
-						})
+						+link({
+							href: "/my-projects",
+							class: "layout-block"
+						}, true)
+							+tile({
+								title: "Google Designs",
+								class: "layer-box layer-surface layout-block",
+								image: {
+									src: "/assets/blue-sky",
+									alt: "Blue sky Alt",
+								}
+							})
 
 					//- Empty alignment Column
 					+column({
