Inline css test

--- a/views/app.pug
+++ b/views/app.pug
@@ -31,7 +31,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		meta(name="robots" content="index, follow")
 		meta(name="copyright" content="Joseph Ojo")
 
-		meta(name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0, user-scalable=yes")
+		meta(name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes")
 		meta(name="keywords" content="Joseph Ojo, josephojo, josephojo.com, joseph, ojo, portfolio, engineer, web, mechatronics, mech, robots, UOIT, OntarioTech, tech, website, netlify, resume, projects, contact")
 
 		meta(property="og:type" content="website")
@@ -70,14 +70,14 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		meta(name="twitter:card", content="summary")
 		meta(name="msapplication-TileColor", content="#ffffff")
 		meta(name="apple-mobile-web-app-capable", content="yes")
-		meta(name="apple-mobile-web-app-status-bar-style", content="white")
+		meta(name="apple-mobile-web-app-status-bar-style", content="#ffffff")
 		meta(name="msapplication-TileImage", content="/ms-icon-144x144.png")
 
 		//- link(rel="preload" href="/fonts/frank-ruhl-libre--black_latin.woff2" as="font" type="font/woff2" crossorigin)
 		//- link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
 		//- link(rel="preload" href="/fonts/montserrat--extrabold_latin.woff2" as="font" type="font/woff2" crossorigin)
 		//- link(rel="preload" href="/fonts/roboto--regular_latin.woff2" as="font" type="font/woff2" crossorigin)
-		link(rel="stylesheet" href="./css/app.min.css" async)
+		link(rel="stylesheet" href="./css/app.min.css" async inline)
 
 		<!--[if lt IE 9]>
 			link(rel="preconnect" href="https://cdnjs.cloudflare.com/" crossorigin)
