--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -136,7 +136,7 @@ block content
 							class: "layout-block"
 						}, true)
 							+tile({
-								title: "Google Designs",
+								title: "Google Designs About",
 								class: "layer-box layer-surface layout-block",
 								image: {
 									class: "effect-parallax",
@@ -158,7 +158,7 @@ block content
 							class: "layout-block"
 						}, true)
 							+tile({
-								title: "Google Designs",
+								title: "Google Designs Project",
 								class: "layer-box layer-surface layout-block",
 								image: {
 									src: "/assets/blue-sky",
