--- a/views/app.pug
+++ b/views/app.pug
@@ -77,14 +77,14 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		//- link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
 		//- link(rel="preload" href="/fonts/montserrat--extrabold_latin.woff2" as="font" type="font/woff2" crossorigin)
 		//- link(rel="preload" href="/fonts/roboto--regular_latin.woff2" as="font" type="font/woff2" crossorigin)
-		link(rel="stylesheet" href="./css/app.min.css" async inline)
+		link(rel="stylesheet" href="./css/app.min.css" async)
 
 		<!--[if lt IE 9]>
 			link(rel="preconnect" href="https://cdnjs.cloudflare.com/" crossorigin)
 			link(rel="dns-prefetch" href="https://cdnjs.cloudflare.com/" crossorigin)
 		<![endif]-->
 
-		script(src="./js/ver-check.min.js" inline async)
+		script(src="./js/ver-check.min.js" async)
 	body
 		+link({
 			class: "skip-main",
@@ -113,4 +113,4 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		block footer
 			+footer
 
-		script(src=`${dev ? "./js/modern.min.js" : "./js/vendor.min.js"}` inline async)
+		script(src=`${dev ? "./js/modern.min.js" : "./js/vendor.min.js"}` async)
