--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -16,9 +16,10 @@ mixin navbar(value = {})
 						href: "/",
 						class: "navbar-title style-primary-dark-hover style-primary-focus"
 					})(itemprop="url" data-swup-preload)
-						img.navbar-logo(src="/assets/gear-svg-icon-logo-color-2.svg" alt="Logo." inline)
-						span.navbar-title-line
-						span(itemprop="name") JOSEPH!
+						span( data-aos="fade")
+							img.navbar-logo(src="/assets/gear-svg-icon-logo-color-2.svg" alt="Logo." inline)
+						span.navbar-title-line(data-aos="fade")
+						span.layout-inline-block(itemprop="name" data-aos="fade-up") JOSEPH!
 					.layout-spacer
 					.navbar-foot.navbar-mobile
 						.layout-inline-block
