--- a/views/components/image.pug
+++ b/views/components/image.pug
@@ -9,9 +9,9 @@ mixin image(value = {})
 			.img-contain
 				picture
 					each n in [3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
-						- let val = n > 5 && n <= 8 ? 70 : (n <= 5 ? Math.max(70 - (n * 5), 45) * 10 : 100);
-						source(media=`(max-width: ${n}00px)` srcset!=`${src}.webp?w=${n + 1}00&quality=${val}` sizes=`(max-width: ${n}00px) ${n}00px` width=`${n}00px` type='image/webp')
-						source(media=`(max-width: ${n}00px)` srcset!=`${src}.jpg?w=${n + 1}00&quality=${val}` sizes=`(max-width: ${n}00px) ${n}00px` width=`${n}00px` type='image/jpeg')
+						- let val = n > 5 && n <= 8 ? 70 : 100;
+						source(media=`(max-width: ${n}00px)` srcset!=`${src}.webp?w=${n}00&quality=${val}` sizes=`(max-width: ${n}00px) ${n}00px` width=`${n}00px` type='image/webp')
+						source(media=`(max-width: ${n}00px)` srcset!=`${src}.jpg?w=${n}00&quality=${val}` sizes=`(max-width: ${n}00px) ${n}00px` width=`${n}00px` type='image/jpeg')
 
 					source(media='(min-width: 1200px)' srcset!=`${src}.webp` sizes="100vw" width="100vw" type='image/webp')
 					source(media='(min-width: 1200px)' srcset!=`${src}.jpg` sizes="100vw" width="100vw" type='image/jpeg')
