--- a/views/components/image.pug
+++ b/views/components/image.pug
@@ -15,7 +15,7 @@ mixin image(value = {})
 
 					source(media='(min-width: 1200px)' data-srcset!=`${src}.webp` sizes="100vw" width="100vw" type='image/webp')
 					source(media='(min-width: 1200px)' data-srcset!=`${src}.jpg` sizes="100vw" width="100vw" type='image/jpeg')
-					img.lazyload.core-img(src!=`${src}.jpg?w=60&quality=70&effect=blur:120` data-sizes="auto" data-src!=`${src}.jpg` alt=alt loading="lazy" width="100vw" itemprop="url")
+					img.lazyload.core-img(data-src!=`${src}.jpg` data-sizes="auto" alt=alt loading="lazy" width="100vw" itemprop="url")
 					//- sizes="(max-width: 500px) 500px,(max-width: 700px) 700px,(max-width: 900px) 900px, 100vw"
 				picture
 					img.placeholder-img(src!=`${src}.jpg?w=60&quality=70&effect=blur:120` sizes="100vw" width="100vw" alt=alt loading="lazy" itemprop="url" inline)
