--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -66,7 +66,7 @@
 
         &-logo {
             transform: translateY(4px);
-            display: inline-block;
+            // display: inline-block;
             line-height: normal;
             min-height: 20px;
             display: inline;
