--- a/views/app.pug
+++ b/views/app.pug
@@ -101,7 +101,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 
 		.layer-action-center.layer-action-center-show
 			article.layer-action-group
-				.layer-shadow.layer-round.layout-align-self-end.layout-margin-horz-small
+				.layer-shadow--1.layer-round.layout-align-self-end.layout-margin-horz-small
 					button.back-to-top.action-btn.action-btn-hover.layer-round.layout-padding-smallest.layer-primary.layer-primary-dark-hover.layer-primary-light-focus.style-tertiary.style-hover-tertiary.style-focus-tertiary(type="button")
 						span.action-btn-group
 							i.action-icon.style-font-size-24(inline) expand_less
