--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -15,7 +15,7 @@ mixin hero(value = {})
             .layer-main
               h2.style-font-family-bold.style-font-weight-300.style-white.layer-main-text(itemprop="description")!= content
             .layout-align-self-end
-              button.layer-footer.action-btn.action-btn-hover.layer-shadow.layer-round.layout-padding-smallest.layer-white.layer-secondary-light-hover.layer-secondary-focus.style-primary.style-surface-hover.style-surface-focus.layer-hero-scroll-down(type="button" tabindex="0")
+              button.layer-footer.action-btn.action-btn-hover.layer-shadow--1.layer-round.layout-padding-smallest.layer-secondary.layer-secondary-light-hover.layer-secondary-dark-focus.style-white.style-surface-hover.style-surface-focus.layer-hero-scroll-down(type="button" tabindex="0")
                 span.action-btn-group
                   i.action-icon.style-font-size-24(inline) expand_more
                   span.action-btn-section
