--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -25,7 +25,9 @@ body {
     font-weight: 400;
     font-size: 15px;
     // height: 100vh;
+
     color: $dark;
+    // color: #ddd;
 
     @media (max-width: 300px) {
         word-break: break-all;
