--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -84,14 +84,16 @@
 
     &-shadow,
     %shadow {
-        box-shadow: 0 0px 35px 5px change-color($primary-dark, $alpha: 0.23);// rgba(0, 0, 40, 0.23);
+        box-shadow: 0 0px 35px 5px change-color($dark, $alpha: 0.53);// rgba(0, 0, 40, 0.23);
 
         &--1 {
-            box-shadow: 0 20px 65px rgba(0, 0, 40, 0.12);
+            box-shadow: 0 5px 14px 6px rgba(0,0,0,.23);
+            // box-shadow: 0 5px 14px 6px rgba(19, 19, 19, 0.23);
+            // border: 2px solid rgba(255, 255, 255, 0.35);
         }
 
         &--2 {
-            box-shadow: 0 10px 85px rgba(0, 0, 40, 0.35);
+            box-shadow: 0 10px 85px rgba(0, 0, 0, 0.35);
         }
     }
 
