Hopefully this works

--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -6,7 +6,8 @@
     display: block;
 
     &-top-spot {
-        margin-top: $height + $size;
+        padding-top: $height + $size;
+        // background: $background;
     }
 
     /* -- Navigation -- */
