--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -3,9 +3,9 @@ include ./image.pug
 mixin hero(value = {})
   - let { content, title, image } = value;
 
-  .layer.layer-hero-id
+  .layer.layer-hero-id.header-top-spot
     article.layout-padding-bottom.layout-padding-dull-top.layout-contain-larger.layout-padding-horz-small
-      .layer-hero.header-top-spot
+      .layer-hero
         +image(image)
 
         .layout-padding-horz-sub-large--device-lt-laptop.layout-padding-vert-sub-extra-large--device-lt-tablet.layout-padding-vert-huge--device-gt-tablet.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center
